@@ -1,12 +1,13 @@
 package umc.study.converter;
 
+import org.springframework.data.domain.Page;
 import umc.study.domain.Mission;
-import umc.study.domain.Review;
 import umc.study.domain.Store;
 import umc.study.web.dto.request.MissionRequestDTO;
 import umc.study.web.dto.response.MissionResponseDTO;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class MissionConverter {
     public static Mission toMission(MissionRequestDTO.CreateMissionDTO createMissionDTO, Store store) {
@@ -28,15 +29,16 @@ public class MissionConverter {
     public static MissionResponseDTO.MissionPreviewDTO toMissionPreviewDTO(Mission mission) {
         return MissionResponseDTO.MissionPreviewDTO.builder()
                 .missionId(mission.getId())
-                .storeId(mission.getStore().getId())
+                .storeId(mission.getStore().getId()) // Spring Data JPA
                 .reward(mission.getReward())
                 .deadline(mission.getDeadline())
                 .missionSpec(mission.getMissionSpec())
                 .build();
     }
 
-    public static MissionResponseDTO.MissionPreviewListDTO toMissionPreviewListDTO(List<Mission> missionList) {
-        List<MissionResponseDTO.MissionPreviewDTO> missionPreviewDTOList = missionList.stream().map(MissionConverter::toMissionPreviewDTO).toList();
+    public static MissionResponseDTO.MissionPreviewListDTO toMissionPreviewListDTO(Page<Mission> missionPage) {
+        List<MissionResponseDTO.MissionPreviewDTO> missionPreviewDTOList = missionPage.stream()
+                .map(MissionConverter::toMissionPreviewDTO).collect(Collectors.toList());
 
         return MissionResponseDTO.MissionPreviewListDTO.builder()
                 .missionPreviewDTOList(missionPreviewDTOList)
